--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "packageManager": "yarn@3.6.3",
   "author": "Hnimtadd <hi@craft.znake>",
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.5",
-    "next": "^14.0.3",
+    "next": "^13.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "eslint": "^8.54.0",
