chore: update viewsource url

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "packageManager": "yarn@3.6.3",
   "author": "Hnimtadd <hi@craft.znake>",
+  "license": "MIT",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
